refactor: move client_type key from provider to model
